--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,19 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSharpLabs"
         mc:Ignorable="d"
-        Title="Визначувач віку :)" Height="260" Width="400" ResizeMode="NoResize">
+        Title="Person magic app" Height="350" Width="400" ResizeMode="NoResize">
     <Grid>
         <StackPanel>
-            <TextBlock Text="Оберіть дату народження:" Margin="10" />
-            <DatePicker SelectedDate="{Binding BirthDate}" Margin="10"/>
+            <TextBlock Text="Ім'я" Margin="10,10,10,0" />
+            <TextBox Text="{Binding FirstName}" IsEnabled="{Binding IsNotBusy}" x:Name="FirstNameTextBox" Margin="10,0,10,0" VerticalAlignment="Top" />
 
-            <TextBlock Text="{Binding Age}" Margin="10"/>
+            <TextBlock Text="Прізвище" Margin="10,10,10,0" />
+            <TextBox Text="{Binding LastName}" IsEnabled="{Binding IsNotBusy}" x:Name="LastNameTextBox" Margin="10,0,10,0" />
 
-            <TextBlock Text="{Binding WesternZodiac}" Margin="10"/>
+            <TextBlock Text="Email" Margin="10,10,10,0" />
+            <TextBox Text="{Binding Email}" IsEnabled="{Binding IsNotBusy}" x:Name="EmailTextBox" Margin="10,0,10,0" VerticalAlignment="Top" />
 
-            <TextBlock Text="{Binding ChineseZodiac}" Margin="10"/>
+            <TextBlock Text="Дата народження" Margin="10,10,10,0" />
+            <DatePicker SelectedDate="{Binding BirthDate}" IsEnabled="{Binding IsNotBusy}" x:Name="BirthDatePicker" Margin="10,0,10,0" VerticalAlignment="Top" />
 
-            <TextBlock Text="{Binding BirthdayMessage}" Foreground="Green" Margin="10"/>
+            <Button Content="Proceed" Margin="10,18,10,0" VerticalAlignment="Top" Click="ProceedButton_Click" IsEnabled="{Binding IsProceedButtonEnabled}" />
         </StackPanel>
     </Grid>
 </Window>
